--- a/local.docker-compose.yaml
+++ b/local.docker-compose.yaml
@@ -19,6 +19,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - 5432:5432
     volumes:
       - database:/var/lib/postgresql/data
     depends_on:
